--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "NjabuloJb-baileys",
   "version": "4.5.0",
-  "description": "A WhatsApp Bot Created By NjabuloJb-baileys",
+  "description": "A joke",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name NjabuloJb-baileys",
-    "stop": "pm2 stop NjabuloJb-baileys",
-    "restart": "pm2 restart NjabuloJb-baileys"
+    "start": "pm2 start index.js --attach",
+    "stop": "pm2 stop index.js --attach",
+    "restart": "pm2 restart index.js --attach"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.18",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
